--- a/style.css
+++ b/style.css
@@ -1,20 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+.clearfix {
+    clear:both;
+}
+
 body {
     font-family: "Inter";
     background: #E5E5E5;
+    width: 940px;
+    margin: 40px auto;
 }
 
 .logo {
-    margin: none;
+    float: left;
 }
 
-main {
-    width: 60%;
+/*área do texto*/
+
+.principal {
+    width: 50%;
+    float: left;
+    margin: 5em 2em;
 }
+
+.principal p {
+    font-size: 12px;
+    line-height: 18px;
+    color: #495057;
+    margin: 10px 0;
+}
+
+form textarea {
+    font-size: 2em;
+    font-family: "Inter";
+    width: 100%;
+    height: 500px;
+    border: none;
+    background-color: transparent;
+    resize: none;
+}
+
+form textarea::placeholder {
+    color: #0A3871;
+}
+
+/*botões*/
+
+#crip {
+    width: 45%;
+	padding: 15px;
+	background: #0A3871;
+	color: #D8DFE8;
+	font-size: 14px;
+    margin-right: 15px;
+	border: none;
+	border-radius: 15px;
+	transition: 0.5s all;
+	cursor: pointer;
+}
+
+#crip:hover {
+    background: #D8DFE8;
+	color: #0A3871;
+}
+
+#descrip {
+    width: 45%;
+	padding: 15px;
+	background: #D8DFE8;
+	color: #0A3871;
+	font-size: 14px;
+	border: none;
+	border-radius: 15px;
+	transition: 0.5s all;
+	cursor: pointer;
+    border: 1px solid #0A3871;
+}
+
+#descrip:hover {
+	background: #0A3871;
+	color: #D8DFE8;
+}
+
+/*área lateral*/
 
 .lateral {
     width: 30%;
-    background: #ffffff;
+    float: left;
+    background-color: #ffffff;
     border-radius: 20px;
+    height: 700px;
+    text-align: center;
 }
+
+.lateral img {
+    width: 80%;
+    margin-top: 50%;
+}
+
+.lateral p {
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1.5;
+    color: #495057;
+    margin: 10px;
+}
+
+.lateral p + p {
+    font-size: small;
+    font-weight: lighter;
+}
+
+
+
+/*rodapé*/
+
+footer {
+    text-align: center;
+    font-size: small;
+}
+
+
+
